--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="song">
+		<p>My current favourite song is [<a href="https://www.youtube.com/watch?v=KSGYVl4ZgRs&ab_channel=T-Series"></a>]</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
